--- a/.gitignore
+++ b/.gitignore
@@ -4,12 +4,14 @@
 *.dll
 *.so
 *.dylib
-
+conf/wxpay
+conf/wechat.yaml
 # Test binary, built with `go test -c`
 *.test
-
+.idea
+vendor
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+
